css/style.css
h1 {
	text-align: center;
	font-size: 50px;
	margin-bottom: 0;
}

.scores {
	display: flex;
	justify-content: space-around;
	width: 100%;
}

.headsScore_container,
.tailsScore_container {
	font-size: 50px;
}

.heads_score,
.tails_score {
	text-align: center;
}

.coin_wrapper {
	display: flex;
	justify-content: center;
	align-items: center;
}

#coin_container {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 300px;
	width: 300px;
	position: relative;
	transition: -webkit-transform 1s ease-in;
	-webkit-transform-style: preserve-3d;
}

#coin_container img {
	width: 300px;
	position: absolute;
}

/* rotate the tails coin image so it is back to back with the heads image */
.coin_tails {
  	-webkit-transform: rotateY(-180deg);
}

/* the coin container is rotating when class flipHeads or flipTails is added */
#coin_container.flipHeads {
	-webkit-animation: flipHeads 3s ease-out forwards;
}

#coin_container.flipTails {
	-webkit-animation: flipTails 3s ease-out forwards;
}

/* Rotate the coin 10 times if heads */
@keyframes flipHeads {
	from {
		-webkit-transform: rotateY(0);
	}
	to {
		-webkit-transform: rotateY(1800deg);
	}
}

/* Rotate the coin 11 times if tails */
@keyframes flipTails {
	from {
		-webkit-transform: rotateY(0);
	}
	to {
		-webkit-transform: rotateY(1980deg);
	}
}

.result {
	height: 50px;
	margin-bottom: 20px;
	font-size: 30px;
	text-align: center;
}

.reset_container {
	text-align: center;
}

button {
	font-size: 40px;
}

